Validation function, UI improvements, Hints system upgrades  (#57)
* numberpad issue

* Attempt 1 at improving hint strategies:

     1. Backend filters hints with no actionable outcome (eliminatedCandidates and
     solvedCells both empty)
     2. Backend supports excludedRanks in BoardRequest to skip already-seen
     strategies
     3. Backend HintResponse now includes strategyRank
     4. Frontend requestHint tracks hintsUsed, accumulates excludedHintRanks,
     and auto-deduplicates
     5. Frontend requestAlternateHint lets user explicitly skip to a different hint
      type
     6. Hint count shown in congrats dialog and stored in game history

* improved hints

* Styling enhancements

* hint overhaul

* script cleanup and hint fixes

* Add some javadoc comments to the dto/model classes

* add hint count to state, docker build/compose improvements

* refactor: strategy cleanup

* Clean up strategy code

* Refector: code improvements

* Attempted fix for puzzle import and validation

* progress feedback

* attempt to fix tests